--- a/client/src/App.css
+++ b/client/src/App.css
@@ -1,3 +1,10 @@
+body {
+  margin: 0; 
+  padding: 0; 
+  background-image: url("https://images.squarespace-cdn.com/content/v1/5d7ff9b09e3a7d1cbd786626/1570819649459-6YVL2U9GJJI452G1ZUSO/Banner-Image-5.jpg?format=2500w");
+  background-size: cover; 
+  background-position: center;
+}
 .App {
   text-align: center;
 }
