--- a/client/src/components/Card/Card.module.css
+++ b/client/src/components/Card/Card.module.css
@@ -3,14 +3,13 @@
   flex-direction: column;
   justify-content: space-between;
   margin: 10px;
-  width: 190px;
-  height: 260px;
-  background-color: #6277a4;
-  border-radius: 3%;
+  width: 200px;
+  height: 290px;
+  background-color: #aa7e95;
+  border-radius: 6%;
   position: relative;
   overflow: hidden;
   border-color: #ffffff;
-  border-width: 10%;
 }
 
 @media only screen and (min-width: 1500px) {
@@ -23,7 +22,7 @@
 .cardItem h2 {
   font-size: 80%;
   object-fit: cover;
-  margin: 1%;
+  margin: 2%;
   color: rgb(255, 255, 255);
   text-align: left;
   font-weight: bold;
@@ -31,51 +30,22 @@
 .cardItem h3 {
   font-size: 70%;
   object-fit: cover;
-  margin: 1%;
+  margin: 3%;
   color: rgb(255, 255, 255);
   text-align: left;
   font-weight: 500;
-}
-.buttonClose {
-  color: #ffffff;
-  background: rgb(161, 20, 20);
-  position: absolute;
-  left: 85%;
-  bottom: 1%;
-  cursor: pointer;
-  font-weight: 700;
-  border-radius: 50%;
-}
-.buttonFav {
-  position: absolute;
-  left: 80%;
-  bottom: 90%;
-  cursor: pointer;
-  font-size: 20px;
-  background: transparent;
-  border-color: transparent;
-}
-@media only screen and (min-width: 1500px) {
-  .buttonFav {
-    left: 83%;
-    bottom: 92%;
-  }
-}
-
-.buttonFav:hover {
-  transform: translateY(-1px);
 }
 
 .cardItem h1 {
   color: rgb(255, 255, 255);
   text-align: left;
-  margin: 2.5%;
+  margin: 3%;
   font-size: 110%;
   font-weight: 700;
 }
 .img {
-  width: 190px;
-  height: 140px;
+  width: 200px;
+  height: 150px;
   object-fit: cover;
   object-position: center;
   opacity: 1;
