--- a/client/src/components/Card/Card.module.css
+++ b/client/src/components/Card/Card.module.css
@@ -15,8 +15,8 @@
 @media only screen and (min-width: 1500px) {
   .cardItem {
     margin: 10px;
-    width: 220px;
-    height: 320px;
+    width: 290px;
+    height: 420px;
   }
 }
 .cardItem h2 {
@@ -35,6 +35,12 @@
   text-align: left;
   font-weight: 500;
 }
+@media only screen and (min-width: 1200px) {
+  .cardItem h3 {
+    font-size: 90%;
+  }
+}
+
 
 .cardItem h1 {
   color: rgb(255, 255, 255);
@@ -43,6 +49,13 @@
   font-size: 110%;
   font-weight: 700;
 }
+@media only screen and (min-width: 1200px) {
+  .cardItem h1 {
+    font-size: 150%;
+    font-weight: 700;
+  }
+}
+
 .img {
   width: 200px;
   height: 150px;
@@ -50,6 +63,12 @@
   object-position: center;
   opacity: 1;
   border-radius: 3%;
+}
+@media only screen and (min-width: 1200px) {
+  .img {
+    width: 300px;
+    height: 220px;
+  }
 }
 
 .cardItem:hover {
